--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,7 +12,7 @@
 
 html {
 	font-size: 62.5%;
-    scroll-behavior: smooth;
+	scroll-behavior: smooth;
 }
 
 body {
@@ -20,3 +20,51 @@ body {
 	font-family: "Open Sans", sans-serif;
 	font-size: 1.6rem;
 }
+
+// nav
+// burger button 
+.burger-btn {
+	position: fixed;
+	top: 20px;
+	right: 20px;
+	padding: 1em;
+	background: none;
+	border: 1px solid transparent;
+	cursor: pointer;
+	z-index: 1000;
+
+	&:focus {
+		outline: none;
+		border: 1px solid rgba(255, 255, 255, 0.5);
+		border-radius: 8px;
+	}
+
+	&:hover{
+		.burger-btn_bars::after, .burger-btn_bars::before{
+			width: 100%;
+		}
+	}
+	&_box {
+		position: relative;
+		width: 40px;
+		height: 30px;
+	}
+	&_bars,
+	&_bars::before,
+	&_bars::after {
+		@include burgerBtn;
+	}
+	&_bars{
+		width: 100%;
+		&::after{
+			top: 13px;
+			width: 60%;
+		}
+		&::before{
+			top: 27px;
+			width: 30%;
+			transition-delay: .1s;
+		}
+	}
+}
+
