--- a/css/main.css
+++ b/css/main.css
@@ -27,10 +27,36 @@
 
 .btn-special-animation {
   position: relative;
-  -webkit-transition: background-color .3s;
-  transition: background-color .3s;
+  -webkit-transition: background-color 0.3s;
+  transition: background-color 0.3s;
   overflow: hidden;
   z-index: 0;
+}
+
+.btn-special-animation::before {
+  display: block;
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  -webkit-transform: scaleX(0);
+          transform: scaleX(0);
+  -webkit-transform-origin: right;
+          transform-origin: right;
+  -webkit-transition: -webkit-transform 0.3s;
+  transition: -webkit-transform 0.3s;
+  transition: transform 0.3s;
+  transition: transform 0.3s, -webkit-transform 0.3s;
+  z-index: -1;
+}
+
+.btn-special-animation:hover::before {
+  -webkit-transform: scaleX(1);
+          transform: scaleX(1);
+  -webkit-transform-origin: left;
+          transform-origin: left;
 }
 
 *,
@@ -69,17 +95,17 @@ body {
   border-radius: 8px;
 }
 
-.burger-btn:hover .burger-btn_bars::after, .burger-btn:hover .burger-btn_bars::before {
+.burger-btn:hover .burger-btn__bars::after, .burger-btn:hover .burger-btn__bars::before {
   width: 100%;
 }
 
-.burger-btn_box {
+.burger-btn__box {
   position: relative;
   width: 40px;
   height: 30px;
 }
 
-.burger-btn_bars, .burger-btn_bars::before, .burger-btn_bars::after {
+.burger-btn__bars, .burger-btn__bars::before, .burger-btn__bars::after {
   position: absolute;
   right: 0;
   height: 3px;
@@ -89,19 +115,71 @@ body {
   transition: width .3s;
 }
 
-.burger-btn_bars {
+.burger-btn__bars {
   width: 100%;
 }
 
-.burger-btn_bars::after {
+.burger-btn__bars::after {
   top: 13px;
   width: 60%;
 }
 
-.burger-btn_bars::before {
+.burger-btn__bars::before {
   top: 27px;
   width: 30%;
   -webkit-transition-delay: .1s;
           transition-delay: .1s;
+}
+
+.header {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding: 2em;
+  height: 75vh;
+  text-align: center;
+  color: #fff;
+  background-image: linear-gradient(45deg, rgba(20, 105, 241, 0.75), rgba(42, 10, 184, 0.75)), url("../img/palm-gc864cee13_640.jpg");
+  background-size: cover;
+  background-attachment: fixed;
+  background-attachment: scroll;
+}
+
+.header__heading {
+  font-family: 'Dancing Script', cursive;
+  font-size: 4.8rem;
+  font-weight: 300;
+}
+
+.header__text {
+  font-size: 1.4rem;
+}
+
+.header__btn {
+  margin-top: 2em;
+  padding: 0.8em 1.6em;
+  font-size: 1.4rem;
+  color: #2e2e2e;
+  border: none;
+  border-radius: 8px;
+  text-decoration: none;
+  text-transform: uppercase;
+  cursor: pointer;
+  background-color: #fff;
+}
+
+.header__btn::before {
+  background-color: #eee;
 }
 /*# sourceMappingURL=main.css.map */
