--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -1,30 +1,47 @@
 // Aby treść na stronie zawsze była na środku dla monitorów ultrawide
-.wapper{
-    margin: 0 auto;
-    width: 100%;
-    max-width: 1200px;
+.wapper {
+	margin: 0 auto;
+	width: 100%;
+	max-width: 1200px;
 }
 
-.white-block{
-    position: absolute;
-    height: 40px;
-    width: 60%;
-    background-color: $pure-white;
+.white-block {
+	position: absolute;
+	height: 40px;
+	width: 60%;
+	background-color: $pure-white;
 
-    &-left{
-        bottom: 0;
-        left: -50px;
-        transform: skew(45deg);
-    }
-    &-right{
-        top: 0;
-        right: -50px;
-        transform: skew(45deg);
-    }
+	&-left {
+		bottom: 0;
+		left: -50px;
+		transform: skew(45deg);
+	}
+	&-right {
+		top: 0;
+		right: -50px;
+		transform: skew(45deg);
+	}
 }
-.btn-special-animation{
-    position: relative;
-    transition: background-color .3s;
-    overflow: hidden;
-    z-index: 0;
+.btn-special-animation {
+	position: relative;
+	transition: background-color 0.3s;
+	overflow: hidden;
+	z-index: 0;
+	&::before {
+		display: block;
+		content: "";
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		transform: scaleX(0);
+		transform-origin: right;
+		transition: transform 0.3s;
+		z-index: -1;
+	}
+	&:hover::before {
+		transform: scaleX(1);
+		transform-origin: left;
+	}
 }
