--- a/sass/_mixins.scss
+++ b/sass/_mixins.scss
@@ -6,3 +6,9 @@
     background-color: $pure-white;
     transition: width .3s;
 }
+@mixin heroImages($bgImg) {
+    background-image: $blue-gradient, url($bgImg);
+    background-size: cover;
+    background-attachment: fixed;
+
+}
