now navigation can show up and hide

--- a/css/main.css
+++ b/css/main.css
@@ -86,7 +86,7 @@ body {
   background: none;
   border: 1px solid transparent;
   cursor: pointer;
-  z-index: 1000;
+  z-index: 10000;
 }
 
 .burger-btn:focus {
@@ -146,8 +146,17 @@ body {
   top: 0;
   height: 100vh;
   width: 100%;
+  -webkit-transform: translatex(100%);
+          transform: translatex(100%);
+  -webkit-transition: 0.5s cubic-bezier(0.65, 0.05, 0.46, 1);
+  transition: 0.5s cubic-bezier(0.65, 0.05, 0.46, 1);
   background-image: radial-gradient(circle at top right, #004eff 0%, #00d4ff 100%);
   z-index: 100;
+}
+
+.nav--active {
+  -webkit-transform: translateX(0);
+          transform: translateX(0);
 }
 
 .nav__item {
@@ -168,12 +177,12 @@ body {
   height: 100%;
   -webkit-transform: scaleY(0);
           transform: scaleY(0);
-  -webkit-transition: -webkit-transform .2s;
-  transition: -webkit-transform .2s;
-  transition: transform .2s;
-  transition: transform .2s, -webkit-transform .2s;
+  -webkit-transition: -webkit-transform 0.2s;
+  transition: -webkit-transform 0.2s;
+  transition: transform 0.2s;
+  transition: transform 0.2s, -webkit-transform 0.2s;
   background-color: #fff;
-  content: '';
+  content: "";
 }
 
 .nav__item:hover::before {
