--- a/sass/main.scss
+++ b/sass/main.scss
@@ -31,7 +31,7 @@ body {
 	background: none;
 	border: 1px solid transparent;
 	cursor: pointer;
-	z-index: 1000;
+	z-index: 10000;
 
 	&:focus {
 		outline: none;
@@ -76,8 +76,15 @@ body {
 	top: 0;
 	height: 100vh;
 	width: 100%;
+	// Ukrywa nawigację przesuwając ją w prawo
+	transform: translatex(100%);
+	transition: .5s cubic-bezier(0.65, 0.05, 0.46, 1);
 	background-image: $light-blue-gradient-solid;
 	z-index: 100;
+
+	&--active {
+		transform: translateX(0);
+	}
 
 	&__item {
 		position: relative;
@@ -94,12 +101,12 @@ body {
 			width: 3px;
 			height: 100%;
 			transform: scaleY(0);
-			transition: transform .2s;
+			transition: transform 0.2s;
 			background-color: $pure-white;
-			content: '';
+			content: "";
 		}
-		&:hover::before{
-				transform: scaleY(1);
+		&:hover::before {
+			transform: scaleY(1);
 		}
 	}
 }
