--- a/sass/main.scss
+++ b/sass/main.scss
@@ -165,15 +165,79 @@ body {
 		}
 	}
 }
+// ==============================
+//media
+//deams section
+// ==============================
+.section-heading {
+	position: relative;
+	margin-bottom: 2em;
+	font-size: 4rem;
+	font-weight: 300;
+	text-transform: uppercase;
+	text-align: center;
+	color: $main-color;
+	letter-spacing: 3px;
+}
+.section-padding {
+	padding: 5em 2em;
+}
+
+.dreams {
+	&__box {
+		display: flex;
+		flex-direction: column;
+		margin: 2em 0em;
+	}
+	&__img {
+		width: 100%;
+		margin-bottom: 1em;
+	}
+	&__title {
+		margin-bottom: 0.5em;
+	}
+	&__text {
+		font-size: 1.4rem;
+	}
+}
 
 // ==============================
 // MEDIA
 // ==============================
 
+@media (min-width: 576px) {
+	.dreams {
+		&__box {
+			flex-direction: row;
+			justify-content: space-between;
+			&-text {
+				width: 55%;
+				&--right {
+					text-align: right;
+				}
+			}
+			&-img {
+				width: 40%;
+				&--right {
+					order: 1;
+				}
+			}
+		}
+		&__img {
+			margin-bottom: 0;
+			max-height: 300px;
+		}
+	}
+}
 @media (min-width: 768px) {
 	.white-block {
 		height: 50px;
 		width: 45%;
+	}
+	.nav {
+		&__item {
+			font-size: 4.8rem;
+		}
 	}
 	.header {
 		&__heading {
@@ -184,6 +248,29 @@ body {
 		}
 		&__btn {
 			font-size: 1.6rem;
+		}
+	}
+	.section-heading {
+		font-size: 3.6em;
+	}
+	.section-padding {
+		padding: 8em 2em;
+	}
+	.dreams {
+		&__box {
+			margin: 5em 0;
+			&-text {
+				display: flex;
+				flex-direction: column;
+				justify-content: flex-end;
+				margin-bottom: 2.5em;
+			}
+			&-title {
+				font-size: 3rem;
+			}
+		}
+		&__text {
+			font-size: 2.2rem;
 		}
 	}
 }
@@ -199,5 +286,11 @@ body {
 		&__heading {
 			font-size: 10rem;
 		}
+	}
+	.section-heading {
+		font-size: 4em;
+	}
+	.section-padding {
+		padding: 10em 2em;
 	}
 }
