--- a/css/main.css
+++ b/css/main.css
@@ -308,6 +308,27 @@ body {
   font-size: 1.4rem;
 }
 
+.hero-img {
+  position: relative;
+  padding: 10em 2em;
+  background-image: linear-gradient(45deg, rgba(20, 105, 241, 0.75), rgba(42, 10, 184, 0.75)), url("../img/hd-wallpaper-g9e456a6e0_640.jpg");
+  background-size: cover;
+  background-attachment: fixed;
+  text-align: center;
+  color: #fff;
+  overflow: hidden;
+}
+
+.hero-img__title {
+  font-family: "Dancing Script", cursive;
+  margin-bottom: 0.5em;
+  font-size: 4.8rem;
+}
+
+.hero-img__text {
+  padding: 1em 0;
+}
+
 @media (min-width: 576px) {
   .dreams__box {
     -webkit-box-orient: horizontal;
@@ -355,6 +376,32 @@ body {
   .header__btn {
     font-size: 1.6rem;
   }
+  .dreams__text {
+    font-size: 1.8rem;
+  }
+  .hero-img {
+    padding: 30rem 2em;
+  }
+  .hero-img hr {
+    margin: 0 auto;
+    width: 70%;
+  }
+  .hero-img__text {
+    font-size: 2.2rem;
+  }
+}
+
+@media (min-width: 992px) {
+  .burger-btn {
+    top: 50px;
+    right: 50px;
+  }
+  .header {
+    background-image: linear-gradient(45deg, rgba(20, 105, 241, 0.75), rgba(42, 10, 184, 0.75)), url("../img/palm-ge99d38684_1920.jpg");
+  }
+  .header__heading {
+    font-size: 10rem;
+  }
   .section-heading {
     font-size: 3.6em;
   }
@@ -378,29 +425,24 @@ body {
     margin-bottom: 2.5em;
   }
   .dreams__box-title {
-    font-size: 3rem;
+    font-size: 3.6rem;
+  }
+  .dreams__img {
+    max-height: 400px;
   }
   .dreams__text {
     font-size: 2.2rem;
   }
-}
-
-@media (min-width: 992px) {
-  .burger-btn {
-    top: 50px;
-    right: 50px;
+  .hero-img {
+    padding: 40rem 2em;
+    background-image: linear-gradient(45deg, rgba(20, 105, 241, 0.75), rgba(42, 10, 184, 0.75)), url("../img/hd-wallpaper-g0945a5bf5_1920.jpg");
   }
-  .header {
-    background-image: linear-gradient(45deg, rgba(20, 105, 241, 0.75), rgba(42, 10, 184, 0.75)), url("../img/palm-ge99d38684_1920.jpg");
+  .hero-img__title {
+    font-size: 7.2rem;
   }
-  .header__heading {
-    font-size: 10rem;
-  }
-  .section-heading {
-    font-size: 4em;
-  }
-  .section-padding {
-    padding: 10em 2em;
+  .hero-img hr {
+    width: 60%;
+    max-width: 900px;
   }
 }
 /*# sourceMappingURL=main.css.map */
