--- a/sass/main.scss
+++ b/sass/main.scss
@@ -220,6 +220,56 @@ body {
 		padding: 1em 0;
 	}
 }
+//ISLANDS
+.islands {
+	&__card {
+		position: relative;
+		margin: 1em 0;
+		height: 450px;
+		color: $pure-white;
+		text-align: center;
+		perspective: 1000px;
+		&:hover {
+			.islands__card-img {
+				transform: rotateY(-180deg);
+				opacity: 0;
+			}
+			.islands__card-info {
+				transform: rotateY(0deg);
+				opacity: 1;
+			}
+		}
+		&-img {
+			padding: 2em;
+			height: 100%;
+			border-radius: 8px;
+			background-size: cover;
+			transition: transform 1s, opacity 1s;
+			&--first {
+				background-image: $light-blue-gradient, url("../img/island1.jpg");
+			}
+			&--second {
+				background-image: $blue-gradient, url("../img/island3.jpg");
+			}
+			&--third {
+				background-image: $purple-gradient, url("../img/island2.jpg");
+			}
+			&-title {
+				font-family: "Dancing Script", cursive;
+				font-size: 2.8rem;
+			}
+			&-info {
+				position: absolute;
+				bottom: 30px;
+				right: 30px;
+				font-size: 1.8rem;
+				i{
+					margin-right: 0.03em;
+				}
+			}
+		}
+	}
+}
 
 // ==============================
 // MEDIA
