--- a/sass/main.scss
+++ b/sass/main.scss
@@ -268,6 +268,56 @@ body {
 				}
 			}
 		}
+		&-info{
+			position: absolute;
+			top: 0;
+			bottom: 0;
+			left: 0;
+			right: 0;
+
+			background-image: $light-blue-gradient-solid;
+			display: flex;
+			flex-direction: column;
+			justify-content: center;
+			border-radius: 8px;
+			opacity: 0;
+			transform: rotateY(180deg);
+			transition: transform 1s, opacity 1s;
+			&-title{
+				position: absolute;
+				left: 50%;
+				transform: translateX(-50%);
+				top: 1.2em;
+				font-family: "Dancing Script", cursive;
+				font-size: 2.8rem;
+			}
+			&-list{
+				margin: 0 auto;
+				width: 70%;
+				list-style: none;
+				&-item{
+					padding: 1em;
+					font-size: 1.4rem;
+					border-bottom: 1px solid $light-white;
+					&:last-child{
+						border-bottom: none;
+					}
+				}
+			}
+			&-btn{
+				position: absolute;
+				left: 50%;
+				transform: translateX(-50%);
+				bottom: 2em;
+				padding: 1em;
+				border-radius: 8px;
+				width: 80%;
+				border: none;
+				background-color: lightgreen;
+				cursor: pointer;
+
+			}
+		}
 	}
 }
 
