--- a/sass/_mixins.scss
+++ b/sass/_mixins.scss
@@ -12,3 +12,10 @@
     background-attachment: fixed;
 
 }
+
+@mixin islandCardStyles {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    
+}
