Section contact is finish

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -374,8 +374,8 @@ body {
 // Reviews
 // ==============================
 
-@media(max-width:767px){
-	.reviews.section-padding{
+@media (max-width: 767px) {
+	.reviews.section-padding {
 		padding: 6em 0;
 	}
 }
@@ -387,9 +387,9 @@ body {
 		padding: 2em;
 		border-radius: 8px;
 		box-shadow: 3px 3px 10px #2e2e2e2e;
-		transition: transform .3s;
-		&:hover{
-			transform: translate(.95);
+		transition: transform 0.3s;
+		&:hover {
+			transform: translate(0.95);
 		}
 	}
 	&__box-img {
@@ -417,6 +417,54 @@ body {
 	}
 }
 
+// ==============================
+// Contact
+// ==============================
+.contact {
+	position: relative;
+	background-color: $light-white;
+	overflow: hidden;
+
+	.white-block-left {
+		background-color: $dark;
+	}
+
+	&__form,
+	&__form-top {
+		display: flex;
+		flex-direction: column;
+	}
+
+	&__form-label {
+		margin-bottom: 0.05em;
+		text-transform: uppercase;
+	}
+
+	&__form-input {
+		@include contacForm;
+	}
+	&__form-textarea {
+		max-width: 100%;
+		min-width: 100%;
+		width: 100%;
+		min-height: 150px;
+	}
+	&__form-btn {
+		align-self: flex-end;
+		padding: 1em;
+		width: 100%;
+		max-width: 300px;
+		color: $pure-white;
+		border: none;
+		border-radius: 8px;
+		background-color: $main-color;
+		cursor: pointer;
+
+		&::before{
+			background-color: $secondary-color;
+		}
+	}
+}
 // ==============================
 // MEDIA
 // ==============================
