--- a/sass/_mixins.scss
+++ b/sass/_mixins.scss
@@ -19,3 +19,11 @@
     transform: translateX(-50%);
     
 }
+@mixin contacForm {
+    margin-bottom: 2em;
+    padding: 0.6em 1.2em;
+    border: none;
+    border-radius: 8px;
+    font-size: 1.6em;
+    
+}
